--- a/src/common/components/App/App.css
+++ b/src/common/components/App/App.css
@@ -3,5 +3,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10px
+    gap: 10px;
+    margin-bottom: 100px;
 }
